@@ -1,34 +1,27 @@
 import org.jetbrains.kotlin.gradle.ExperimentalKotlinGradlePluginApi
 import org.jetbrains.kotlin.gradle.targets.js.dsl.ExperimentalWasmDsl
 
-
 plugins {
 	alias(libs.plugins.kotlinMultiplatform)
+	alias(libs.plugins.androidLibrary)
 }
 
 java {
 	toolchain {
-		languageVersion.set(JavaLanguageVersion.of(22))
+		languageVersion.set(JavaLanguageVersion.of(17))
 	}
 }
 
 
 kotlin {
-	js {
-		binaries.executable()
-		browser()
-	}
+	js { browser() }
 
-	jvm {
-		// On to make "JavaExec" work, else we got SourceSet with name 'main' not found, see https://youtrack.jetbrains.com/issue/KT-42683
-		withJava()
-	}
+	jvm()
 
 	@OptIn(ExperimentalWasmDsl::class)
-	wasmJs {
-		binaries.executable()
-		browser()
-	}
+	wasmJs { browser() }
+
+	androidTarget()
 
 	sourceSets {
 
@@ -48,52 +41,12 @@ kotlin {
 	}
 }
 
-enum class Os {
-	Linux,
-	Windows,
-	MacOs
-}
+android {
+	namespace = "io.ygdrasil.shared"
+	compileSdk = 35
 
-enum class Architecture {
-	X86_64,
-	AARCH64
-}
-
-object Platform {
-	val os: Os
-		get() = System.getProperty("os.name").let { name ->
-			when {
-				arrayOf("Linux", "SunOS", "Unit").any { name.startsWith(it) } -> Os.Linux
-				arrayOf("Mac OS X", "Darwin").any { name.startsWith(it) } -> Os.MacOs
-				arrayOf("Windows").any { name.startsWith(it) } -> Os.Windows
-				else -> error("Unrecognized or unsupported operating system.")
-			}
-		}
-
-	val architecture: Architecture
-		get() = System.getProperty("os.arch").let { architecture ->
-			when (architecture) {
-				"aarch64" -> Architecture.AARCH64
-				"x86_64", "amd64" -> Architecture.X86_64
-				else -> error("Unrecognized or unsupported architecture $architecture.")
-			}
-		}
-
-}
-
-tasks.register<JavaExec>("runApp") {
-	mainClass = "MainKt"
-	if (Platform.os == Os.MacOs) {
-		jvmArgs(
-			"-XstartOnFirstThread",
-			"--add-opens=java.base/java.lang=ALL-UNNAMED",
-			"--enable-native-access=ALL-UNNAMED"
-		)
-	} else {
-		jvmArgs(
-			"--add-opens=java.base/java.lang=ALL-UNNAMED",
-			"--enable-native-access=ALL-UNNAMED"
-		)
+	defaultConfig {
+		minSdk = 28
 	}
-	classpath = sourceSets["main"].runtimeClasspath
+
 }
